--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,20 +1,23 @@
 <div class="box box-primary">
   <div class="box-body">
     <form nz-form [nzLayout]="'inline'">
-      <div nz-form-item nz-row class="mr">
+      <!-- <div nz-form-item nz-row class="mr">
         <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="batchDel()" class="mr">
           <i class="anticon anticon-delete"></i><span>批量删除</span>
         </button>
         <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="gotoAdd()" >
           <i class="anticon anticon-plus-circle-o"></i><span>新增</span>
         </button>
-      </div>
+      </div> -->
       <div nz-form-item nz-row>
         <div *ngFor="let field of fields" class="mr">
           <dynamic-form [form]="form" [field]="field"></dynamic-form>
         </div>
         <div nz-col>
           <button (click)="search()"  type="button" nz-button [nzType]="'primary'" [nzSize]="'large'">搜索</button>
+        </div>
+        <div nz-col>
+          <button (click)="search()"  type="button" nz-button [nzType]="'primary'" [nzSize]="'large'">导出</button>
         </div>
       </div>
     </form>
