--- a/src/app/shop/merchant/merchant.component.html
+++ b/src/app/shop/merchant/merchant.component.html
@@ -2,9 +2,9 @@
   <nz-breadcrumb class="breadcrumb">
     <nz-breadcrumb-item>
       <i class="anticon anticon-shop"></i>
-      <span>店铺</span>
+      <span>访问信息</span>
     </nz-breadcrumb-item>
-    <nz-breadcrumb-item>门店管理</nz-breadcrumb-item>
+    <!-- <nz-breadcrumb-item>门店管理</nz-breadcrumb-item> -->
   </nz-breadcrumb>
 
   <!--搜索栏-->
@@ -14,33 +14,28 @@
     [(nzPageSize)]="pageSize">
     <thead nz-thead>
       <tr>
-        <th nz-th [nzCheckbox]="true">
+        <!-- <th nz-th [nzCheckbox]="true">
           <label nz-checkbox [(ngModel)]="allChecked" (ngModelChange)="updateAllChecked()" [nzIndeterminate]="indeterminate"></label>
-        </th>
-        <th nz-th><span>门店图片</span></th>
-        <th nz-th><span>门店名称</span></th>
-        <th nz-th><span>地址</span></th>
-        <th nz-th><span>联系电话</span></th>
-        <th nz-th><span>推荐人账号</span></th>
-        <th nz-th><span>推荐人手机号</span></th>
-        <th nz-th><span>推荐人昵称</span></th>
-        <th nz-th><span>二维码</span></th>
-        <th nz-th><span>操作</span></th>
+        </th> -->
+        <th nz-th><span>id</span></th>
+        <th nz-th><span>手机号码</span></th>
+        <th nz-th><span>访问时间</span></th>
+        <th nz-th><span>访问链接</span></th>
       </tr>
     </thead>
     <tbody nz-tbody>
       <tr nz-tbody-tr *ngFor="let merchant of nzTable.data">
-        <td nz-td [nzCheckbox]="true">
+        <!-- <td nz-td [nzCheckbox]="true">
           <label nz-checkbox [(ngModel)]="merchant.checked" (ngModelChange)="updateSingleChecked()"></label>
         </td>
         <td nz-td (click)="showModal(merchant.merchant_img)">
           <img class="with-modal" [src]="merchant.merchant_img">
-        </td>
-        <td nz-td>{{ merchant.merchant_name }}</td>
-        <td nz-td>{{ merchant.address_detail }}</td>
-        <td nz-td>{{ merchant.phone }}</td>
-        <td nz-td>{{ merchant.recommend_member_no }}</td>
-        <td nz-td>{{ merchant.recommend_phone }}</td>
+        </td> -->
+        <td nz-td>{{ merchant.clientId }}</td>
+        <td nz-td>{{ merchant.phoneNo }}</td>
+        <td nz-td>{{ merchant.dateTime }}</td>
+        <td nz-td>{{ merchant.url }}</td>
+        <!-- <td nz-td>{{ merchant.recommend_phone }}</td>
         <td nz-td>{{ merchant.recommend_nickname }}</td>
         <td nz-td (click)="showModal(merchant.merchant_QRCode)">
           <img class="with-modal" [src]="merchant.merchant_QRCode">
@@ -49,7 +44,7 @@
           <button nz-button nzType="primary" nzSize="small" [nzGhost]="true" (click)="gotoEdit(merchant.id)">编辑</button>
           <span nz-table-divider></span>
           <button nz-button nzType="danger" nzSize="small" [nzGhost]="true" (click)="delShopTypeById(merchant.id)">删除</button>
-        </td>
+        </td> -->
       </tr>
     </tbody>
   </nz-table>
