--- a/src/app/shop/shop-type/shop-type.component.html
+++ b/src/app/shop/shop-type/shop-type.component.html
@@ -2,9 +2,9 @@
   <nz-breadcrumb class="breadcrumb">
     <nz-breadcrumb-item>
       <i class="anticon anticon-shop"></i>
-      <span>店铺</span>
+      <span>注册信息</span>
     </nz-breadcrumb-item>
-    <nz-breadcrumb-item>门店分类</nz-breadcrumb-item>
+    <!-- <nz-breadcrumb-item>门店分类</nz-breadcrumb-item> -->
   </nz-breadcrumb>
 
   <!--搜索栏-->
@@ -14,32 +14,33 @@
     [(nzPageSize)]="pageSize">
     <thead nz-thead>
       <tr>
-        <th nz-th [nzCheckbox]="true">
+        <!-- <th nz-th [nzCheckbox]="true">
           <label nz-checkbox [(ngModel)]="allChecked" (ngModelChange)="updateAllChecked()" [nzIndeterminate]="indeterminate"></label>
-        </th>
-        <th nz-th><span>排序</span></th>
-        <th nz-th><span>分类图标</span></th>
-        <th nz-th><span>分类名称</span></th>
-        <th nz-th><span>分类简介</span></th>
-        <th nz-th><span>操作</span></th>
+        </th> -->
+        <th nz-th><span>编号</span></th>
+        <th nz-th><span>手机号码</span></th>
+        <th nz-th><span>操作时间</span></th>
+        <th nz-th><span>链接地址</span></th>
+        <!-- <th nz-th><span>操作</span></th> -->
       </tr>
     </thead>
     <tbody nz-tbody>
       <tr nz-tbody-tr *ngFor="let shopType of nzTable.data">
-        <td nz-td [nzCheckbox]="true">
+        <!-- <td nz-td [nzCheckbox]="true">
           <label nz-checkbox [(ngModel)]="shopType.checked" (ngModelChange)="updateSingleChecked()"></label>
-        </td>
-        <td nz-td>{{ shopType.ord }}</td>
+        </td> -->
+        <td nz-td>{{ shopType.clientId }}</td>
         <td nz-td>
-          <img class="shop-type-icon" [src]="shopType.icon">
+          <!-- <img class="shop-type-icon" [src]="shopType.icon"> -->
+           {{ shopType.phoneNo }}
         </td>
-        <td nz-td>{{ shopType.type_name }}</td>
-        <td nz-td>{{ shopType.type_desc }}</td>
-        <td nz-td>
+        <td nz-td>{{ shopType.phoneNo }}</td>
+        <td nz-td>{{ shopType.dateTime }}</td>
+        <!-- <td nz-td>
           <button nz-button nzType="primary" nzSize="small" [nzGhost]="true" (click)="gotoEdit(shopType.id)">编辑</button>
           <span nz-table-divider></span>
           <button nz-button nzType="danger" nzSize="small" [nzGhost]="true" (click)="delShopTypeById(shopType.id)">删除</button>
-        </td>
+        </td> -->
       </tr>
     </tbody>
   </nz-table>
