--- a/src/app/shop/shop-type/shop-type.component.html
+++ b/src/app/shop/shop-type/shop-type.component.html
@@ -34,8 +34,8 @@
           <!-- <img class="shop-type-icon" [src]="shopType.icon"> -->
            {{ shopType.phoneNo }}
         </td>
-        <td nz-td>{{ shopType.phoneNo }}</td>
         <td nz-td>{{ shopType.dateTime }}</td>
+        <td nz-td>{{ shopType.url }}</td>
         <!-- <td nz-td>
           <button nz-button nzType="primary" nzSize="small" [nzGhost]="true" (click)="gotoEdit(shopType.id)">编辑</button>
           <span nz-table-divider></span>
