--- a/src/app/shop/shop-type/shop-type.component.html
+++ b/src/app/shop/shop-type/shop-type.component.html
@@ -18,9 +18,9 @@
           <label nz-checkbox [(ngModel)]="allChecked" (ngModelChange)="updateAllChecked()" [nzIndeterminate]="indeterminate"></label>
         </th> -->
         <th nz-th><span>编号</span></th>
-        <th nz-th><span>手机号码</span></th>
-        <th nz-th><span>操作时间</span></th>
-        <th nz-th><span>链接地址</span></th>
+        <th nz-th><span>注册手机</span></th>
+        <th nz-th><span>注册时间</span></th>
+        <th nz-th><span>注册链接</span></th>
         <!-- <th nz-th><span>操作</span></th> -->
       </tr>
     </thead>
