--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -7,7 +7,7 @@
       </span>
       <ul>
         <ng-container *ngFor="let subItem of item?.subs;let i = index;">
-          <li nz-menu-item *ngIf="!subItem?.subs" (click)="selectMenu(item, i)" >
+          <li nz-menu-item *ngIf="!subItem?.subs" (click)="selectMenu(item, i)" [nzSelected]="true">
             <a [routerLink]="[subItem.path]">{{ subItem?.title }}</a>
           </li>
           <li nz-submenu *ngIf="subItem?.subs" >
